@@ -47,7 +47,7 @@ class DefaultDBSourcePlugin extends SourcePluginBase {
   /**
    * {@inheritdoc}
    */
-  public function alterBackupMigrate(BackupMigrateInterface $bam, $key, $options = []) {
+  public function alterBackupMigrate(BackupMigrateInterface $bam, $key, array $options = []) {
     if ($source = $this->getObject()) {
       $bam->sources()->add($key, $source);
       // @todo This needs a better solution.
