@@ -24,6 +24,7 @@ Backup and Migrate 5.0.x-dev, xxxx-xx-xx
   produce backup.
 #3156794 by larisse, hmendes, pglatz, DamienMcKenna: Add token support to
   filename output.
+#3217908 by DamienMcKenna: Inconsistent arguments on alterBackupMigrate().
 
 
 Backup and Migrate 5.0.0-rc2, 2020-09-28
